[package]
name = "stat-bot"
version = "0.1.0"
authors = ["Liss Heidrich <31625940+Clueliss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
lazy_static = "1.4.0"
serde = "1.0.106"
serde_json = "1.0.52"
chrono = "0.4.11"
libc = "0.2.69"
clap = { git = "https://github.com/clap-rs/clap/" }
tempfile = "3.1.0"