[package]
name = "stat-bot"
version = "0.1.0"
authors = ["Liss Heidrich <31625940+Clueliss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
serde = "1.0.106"
serde_json = "1.0.52"
chrono = "0.4.11"
libc = "0.2.69"
clap = "3.0.0-beta.2"
tempfile = "3.1.0"
signal-hook = "0.1.16"